[tool.poetry]
name = "eeprom"
version = "0.1.0"
description = ""
authors = ["Luke Shiner <luke@lukeshiner.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyserial = "^3.4"
flake8 = "^3.7.9"
click = "^7.0"
isort = "^5.6.4"
black = "^20.8b1"

[tool.poetry.dev-dependencies]
flake8-docstrings = "^1.5.0"
isort = "^5.0.0"
pytest = "^5.3.5"
pytest-cov = "^2.8.1"
coveralls = "^1.11.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
eeprom = "eeprom:cli"
